--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@ const scene = new THREE.Scene();
 
 // Camera
 const camera = new THREE.PerspectiveCamera(75, window.innerWidth/window.innerHeight, 0.1, 1000);
-camera.position.set(1.5, 2, -3.2);
+camera.position.set(10, 1, 2);
 camera.lookAt(0, 1, 0);
 const controls = new THREE.OrbitControls(camera, renderer.domElement);
 
@@ -49,6 +49,29 @@ plane.rotation.x = -Math.PI / 2;
 plane.position.y = 0;
 plane.receiveShadow = true;
 scene.add(plane);
+
+
+const loader = new THREE.OBJLoader();
+        loader.load('https://raw.githubusercontent.com/Pongpanot99/final.github.io/main/colot.obj', function (object) {
+            object.castShadow = true; // ✅ วัตถุนี้สร้างเงา
+            // ตั้งค่า castShadow กับทุก mesh ใน object
+            object.traverse(function (child) {
+                if (child.isMesh) {
+                    child.castShadow = true;
+                    child.receiveShadow = true;
+                    child.material = new THREE.MeshStandardMaterial({
+                        color: 0xffffff
+                    });
+                }
+            });
+            object.scale.set(0.2, 0.2, 0.2);
+            scene.add(object);
+        }, undefined, function (error) {
+            console.error('Error loading OBJ:', error);
+        });
+
+
+
 
 // Lights
 const directionalLight = new THREE.DirectionalLight(0xffeedd, 0.9);
@@ -74,6 +97,7 @@ new THREE.RGBELoader()
   );
 
 function animate() {
+  
   renderer.render(scene, camera);
   requestAnimationFrame(animate);
 }
